--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,8 @@
 {
+  "printWidth": 80,
+  "semi": false,
+  "tabWidth": 4,
+  "useTabs": false,
   "singleQuote": true,
-  "semi": true
+  "trailingComma": "all"
 }
