--- a/package.json
+++ b/package.json
@@ -1,45 +1,46 @@
 {
-  "name": "quivernote-web",
-  "version": "0.0.1",
-  "description": "quivernote-web",
-  "productName": "quivernote-web",
-  "author": "",
-  "private": true,
-  "scripts": {
-    "lint": "eslint --ext .js,.ts,.vue ./",
-    "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
-    "test": "echo \"No test specified\" && exit 0",
-    "dev": "quasar dev",
-    "build": "quasar build",
-    "build:pwa": "quasar build -m pwa"
-  },
-  "dependencies": {
-    "@quasar/extras": "^1.0.0",
-    "axios": "^0.21.1",
-    "pinia": "^2.0.11",
-    "quasar": "^2.6.0",
-    "vditor": "^3.8.15",
-    "vue": "^3.0.0",
-    "vue-i18n": "^9.0.0",
-    "vue-router": "^4.0.0"
-  },
-  "devDependencies": {
-    "@intlify/vite-plugin-vue-i18n": "^3.3.1",
-    "@quasar/app-vite": "^1.0.0",
-    "@types/node": "^12.20.21",
-    "@typescript-eslint/eslint-plugin": "^5.10.0",
-    "@typescript-eslint/parser": "^5.10.0",
-    "autoprefixer": "^10.4.2",
-    "eslint": "^8.10.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-vue": "^8.5.0",
-    "less": "^4.1.3",
-    "prettier": "^2.5.1",
-    "typescript": "^4.5.4"
-  },
-  "engines": {
-    "node": "^18 || ^16 || ^14.19",
-    "npm": ">= 6.13.4",
-    "yarn": ">= 1.21.1"
-  }
+    "name": "quivernote-web",
+    "version": "0.0.1",
+    "description": "quivernote-web",
+    "productName": "quivernote-web",
+    "author": "",
+    "private": true,
+    "scripts": {
+        "lint": "eslint --ext .js,.ts,.vue ./",
+        "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
+        "test": "echo \"No test specified\" && exit 0",
+        "dev": "quasar dev",
+        "build": "quasar build",
+        "build:pwa": "quasar build -m pwa"
+    },
+    "dependencies": {
+        "@quasar/extras": "^1.0.0",
+        "axios": "^0.21.1",
+        "pinia": "^2.0.11",
+        "quasar": "^2.6.0",
+        "vditor": "^3.8.15",
+        "vue": "^3.0.0",
+        "vue-i18n": "^9.0.0",
+        "vue-router": "^4.0.0"
+    },
+    "devDependencies": {
+        "vite": "^2.9.14",
+        "@intlify/vite-plugin-vue-i18n": "^3.3.1",
+        "@quasar/app-vite": "^1.0.0",
+        "@types/node": "^12.20.21",
+        "@typescript-eslint/eslint-plugin": "^5.10.0",
+        "@typescript-eslint/parser": "^5.10.0",
+        "autoprefixer": "^10.4.2",
+        "eslint": "^8.10.0",
+        "eslint-config-prettier": "^8.1.0",
+        "eslint-plugin-vue": "^8.5.0",
+        "less": "^4.1.3",
+        "prettier": "^2.5.1",
+        "typescript": "^4.5.4"
+    },
+    "engines": {
+        "node": "^18 || ^16 || ^14.19",
+        "npm": ">= 6.13.4",
+        "yarn": ">= 1.21.1"
+    }
 }
